Grid fill crashes blender in specific situation #37388

Closed
opened 2013-11-09 22:40:15 +01:00 by Mark Titchener · 4 comments

%%%--- Operating System, Graphics card ---
Windows 7 SP1, Nvida Quadro 1000M

- Blender version with error, and version that worked ---

2.69 official release. Also happens in 2.68.

- Short description of error ---

Grid fill in this situation crashes blender (the program disappears with no crash report).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open the attached blend (should already be in edit mode with vertices selected)
  2. Press space, type Grid Fill, press enter
  3. Blender disappears every time (process no longer running with no error)

%%%

%%%--- Operating System, Graphics card --- Windows 7 SP1, Nvida Quadro 1000M - Blender version with error, and version that worked --- 2.69 official release. Also happens in 2.68. - Short description of error --- Grid fill in this situation crashes blender (the program disappears with no crash report). - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1) Open the attached blend (should already be in edit mode with vertices selected) 2) Press space, type Grid Fill, press enter 3) Blender disappears every time (process no longer running with no error) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed, invalid mem access in bmesh, will try to have a look at it, if too complicated will reassign to Campbell!%%%

%%%Confirmed, invalid mem access in bmesh, will try to have a look at it, if too complicated will reassign to Campbell!%%%

%%%Fixed in r61231, thanks for the report (note you can't use grid fill in this case, as your selected edges are not border (or wire) ones, they are already used by two faces.%%%

%%%Fixed in r61231, thanks for the report (note you can't use grid fill in this case, as your selected edges are not border (or wire) ones, they are already used by two faces.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37388
No description provided.