Fix [#37388] Grid fill crashes blender in specific situation.

With some geometries, we can have a valid first path, without being able to find a valid second one, added needed check.